force-app/main/default/objects/copado__Git_Backup__c/copado__Git_Backup__c.object-meta.xml
<CustomObject>
    <description>A Git Snapshot record in Copado defines a connection between a Salesforce Org with a Git Repository/branch.</description>
    <label>Git Snapshot</label>
    <nameField>
        <label>Git Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>