force-app/main/default/objects/copado__Git_Backup__c/fields/copado__Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>copado__Cron_Expression__c</fullName>
    <inlineHelpText>Enter a cron expression to schedule the frequency of this job. Please keep in mind that certain cron expressions might not be supported by Salesforce.</inlineHelpText>
    <label>Cron Expression</label>
    <length>100</length>
    <type>Text</type>
</CustomField>