force-app/main/default/objects/copado__Git_Backup__c/fields/copado__External_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__External_Id__c</fullName>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>