force-app/main/default/objects/copado__Git_Backup__c/fields/copado__Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>copado__Git_Repository__c</fullName>
    <description>Git Repository linked to the Git Snapshot. The specified Branch must exist in the Git Repository.</description>
    <inlineHelpText>Git repository linked to the Git snapshot. Please make sure that the specified branch exists in the repository. It is not recommended to take snapshots with a Git repository which is already used for an active pipeline, as it may affect your overall DevOps performance.</inlineHelpText>
    <label>Git Repository</label>
    <referenceTo>copado__Git_Repository__c</referenceTo>
    <relationshipLabel>Git Snapshots</relationshipLabel>
    <relationshipName>Git_Backups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>