force-app/main/default/objects/copado__Git_Backup__c/fields/copado__Org__c.field-meta.xml
<CustomField>
    <fullName>copado__Org__c</fullName>
    <description>A validated Credential used to retrieve the metadata that will be committed to the specified Branch in the Git Snapshot.</description>
    <inlineHelpText>A validated Org Credential used to retrieve the metadata that will be committed to the branch specified in the Git Snapshot.</inlineHelpText>
    <label>Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Git Snapshots</relationshipLabel>
    <relationshipName>Git_Backups</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>