force-app/main/default/objects/copado__Git_Backup__c/fields/copado__Other_Information__c.field-meta.xml
<CustomField>
    <fullName>copado__Other_Information__c</fullName>
    <label>Other Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>