force-app/main/default/objects/copado__Git_Backup__c/fields/copado__Scheduled_Commit_Message__c.field-meta.xml
<CustomField>
    <fullName>copado__Scheduled_Commit_Message__c</fullName>
    <description>Message to use when committing the snapshot to Git</description>
    <inlineHelpText>Message to use when committing the snapshot to Git</inlineHelpText>
    <label>Commit Message</label>
    <type>TextArea</type>
</CustomField>