force-app/main/default/objects/copado__Git_Backup__c/fields/copado__View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>copado__View_in_Git__c</fullName>
    <description>Link to the branch in your Git Repository.</description>
    <formula>HYPERLINK(
	IF(
		AND(NOT(ISNULL(copado__Git_Repository__r.copado__Branch_Base_URL__c)), copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;), 
		IF(
			AND(NOT(ISPICKVAL(copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Git_Repository__r.copado__Branch_Base_URL__c +  copado__Branch__c,
			IF(
				CONTAINS(copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,copado__Branch__c),
				copado__Git_Repository__r.copado__Branch_Base_URL__c + copado__Branch__c
			)
		),
	&apos;&apos;), 
	copado__Branch__c
)</formula>
    <inlineHelpText>Link to the branch in your Git Repository.</inlineHelpText>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>