force-app/main/default/objects/copado__Git_Backup__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Branch__c</columns>
    <columns>copado__Frequency__c</columns>
    <columns>copado__Git_Repository__c</columns>
    <columns>copado__Org__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>